-- Noteworthy changes in version 1.0.8 (2015-??-??)
o) Added options::reconnectinterval configuration option


-- Noteworthy changes in version 1.0.7 (2015-06-06)
o) HOPM can now detect Dreamboxes with default root passwords
o) Fixed bug where the configuration parser would report syntax errors
   with invalid line numbers when there are multi-line C-style
   comments in the config file
o) Minor code cleanups


-- Noteworthy changes in version 1.0.6 (2015-05-27)
o) HOPM now catches MikroTik HttpProxies


-- Noteworthy changes in version 1.0.5 (2015-05-04)
o) Fixed bug where HOPM couldn't connect to the server specified
   in the irc {} block on some OS


-- Noteworthy changes in version 1.0.4 (2015-03-17)
o) Log timestamp format is ISO8601 now
o) Added 'protocols' command which dumps a list of configured scanners
   and their associated protocols/ports to a channel
o) Code cleanups and performance improvements


-- Noteworthy changes in version 1.0.3 (2015-01-28)
o) Fixed bug where HOPM wouldn't try re-connecting to the server in
   case the connection got lost.
o) Added irc::notice configuration option


-- Noteworthy changes in version 1.0.2 (2015-01-12)
o) Added options::negcache_rebuild configuration option
o) Added basic IPv6 support allowing HOPM to bind and
   connect to IPv6 addresses
o) Many code cleanups and optimizations


-- Noteworthy changes in version 1.0.1 (2015-01-06)
o) Fixed build on OS X
o) More code cleanups, no user-visible changes


-- Noteworthy changes in version 1.0.0 (2015-01-03)
o) Minor stabilization and performance improvements


-- Noteworthy changes in version 1.0.0beta2 (2014-12-31)
o) Added irc::readtimeout configuration option
o) Many code cleanups and optimizations
o) Worked towards IPv6 support
o) Fixed reference.conf from causing syntax errors
o) hopm now uses poll() for I/O event notification instead of select()


-- Noteworthy changes in version 1.0.0beta1 (2014-12-25)